# application

./: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml  import_real_costs.ps1  import_real_costs.sh  straßen.txt
backend/: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/backend/: urls.py
backend/backend/settings/: common.py  dev.py  docker.py  prod.py
backend/core/: admin.py  field_mapping.py  filters.py  importer.py  models.py  parsers.py  refiner.py  serializers.py  settings.py  street_matching.py  tests.py  urls.py  views.py
backend/core/fixtures/: streets.json
backend/core/management/commands/: import_applications.py  import_real_costs.py  rematch_streets.py
backend/core/migrations/: 0001_initial.py  0002_remove_application_engineering_services_and_more.py  0003_application_sha256_alter_application_cost_per_meter_and_more.py  0004_alter_application_options_alter_street_options_and_more.py  0005_alter_application_execution_start_and_more.py  0005_asset_division.py  0006_merge_20260618_0835.py
parser/: .dockerignore  .env.example  .gitignore  Containerfile  README.md  main.py  prompts.py  requirements.txt  schema.py
ui/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
ui/docs/: DATA_MODEL.md  DESIGN.md  PLAN.md
ui/public/: street-geometry.json
ui/scripts/: build-street-geometry.mjs
ui/src/: index.html  styles.css
ui/src/app/: app.config.ts  app.css  app.routes.ts  app.spec.ts  app.ts
ui/src/environments/: environment.development.ts  (+2 more)
(+69 files in other folders)
