[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    "Johannes Ruthmann <j.ruthmann@online.de>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "5.2"
djangorestframework = "^3.17.1"
django-filter = "^25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
